// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table > should match snapshot - caption 1`] = `
<table
  class="nhsuk-table"
  data-testid="table"
>
  <caption
    class="nhsuk-table__caption"
  >
    Caption
  </caption>
  <thead
    class="nhsuk-table__head"
    role="rowgroup"
  >
    <tr
      class=""
      role="row"
    >
      <th
        class="nhsuk-table__header"
        role="columnheader"
      >
        Age
      </th>
      <th
        class="nhsuk-table__header"
        role="columnheader"
      >
        How much
      </th>
      <th
        class="nhsuk-table__header"
        role="columnheader"
      >
        How often
      </th>
    </tr>
  </thead>
  <tbody
    class="nhsuk-table__body"
  >
    <tr
      class="nhsuk-table__row"
      role="row"
    >
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        7 to 9 years
      </td>
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        200mg
      </td>
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        Max 3 times in 24 hours
      </td>
    </tr>
    <tr
      class="nhsuk-table__row"
      role="row"
    >
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        10 to 11 years
      </td>
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        200mg to 300mg
      </td>
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        Max 3 times in 24 hours
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table > should match snapshot - numeric column 1`] = `
<table
  class="nhsuk-table"
  data-testid="table"
>
  <thead
    class="nhsuk-table__head"
    role="rowgroup"
  >
    <tr
      class=""
      role="row"
    >
      <th
        class="nhsuk-table__header"
        role="columnheader"
      >
        Age
      </th>
      <th
        class="nhsuk-table__header"
        role="columnheader"
      >
        How much
      </th>
      <th
        class="nhsuk-table__header nhsuk-table__header--numeric"
        role="columnheader"
      >
        How often
      </th>
    </tr>
  </thead>
  <tbody
    class="nhsuk-table__body"
  >
    <tr
      class="nhsuk-table__row"
      role="row"
    >
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        7 to 9 years
      </td>
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        200mg
      </td>
      <td
        class="nhsuk-table__cell nhsuk-table__cell--numeric"
        role="cell"
      >
        Max 3 times in 24 hours
      </td>
    </tr>
    <tr
      class="nhsuk-table__row"
      role="row"
    >
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        10 to 11 years
      </td>
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        200mg to 300mg
      </td>
      <td
        class="nhsuk-table__cell nhsuk-table__cell--numeric"
        role="cell"
      >
        Max 3 times in 24 hours
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table > should match snapshot - other children 1`] = `
<table
  class="nhsuk-table-responsive"
  data-testid="table"
>
  <thead
    class="nhsuk-table__head"
    role="rowgroup"
  >
    <tr
      class=""
      role="row"
    >
      <th
        class="nhsuk-table__header"
        role="columnheader"
      >
        Age
      </th>
      <th
        class="nhsuk-table__header"
        role="columnheader"
      >
        How much
      </th>
      <th
        class="nhsuk-table__header"
        role="columnheader"
      />
    </tr>
  </thead>
  <tbody
    class="nhsuk-table__body"
  >
    <tr
      class="nhsuk-table__row"
      role="row"
    >
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        <span
          class="nhsuk-table-responsive__heading"
        >
          Age
        </span>
        7 to 9 years
      </td>
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        <span
          class="nhsuk-table-responsive__heading"
        >
          How much
        </span>
        200mg
      </td>
      <td>
        Max 3 times in 24 hours
      </td>
    </tr>
    <tr
      class="nhsuk-table__row"
      role="row"
    >
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        <span
          class="nhsuk-table-responsive__heading"
        >
          Age
        </span>
        10 to 11 years
      </td>
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        <span
          class="nhsuk-table-responsive__heading"
        >
          How much
        </span>
        200mg to 300mg
      </td>
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        Max 3 times in 24 hours
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table > should match snapshot - responsive 1`] = `
<table
  class="nhsuk-table-responsive"
  data-testid="table"
>
  <thead
    class="nhsuk-table__head"
    role="rowgroup"
  >
    <tr
      class=""
      role="row"
    >
      <th
        class="nhsuk-table__header"
        role="columnheader"
      >
        Age
      </th>
      <th
        class="nhsuk-table__header"
        role="columnheader"
      >
        How much
      </th>
      <th
        class="nhsuk-table__header"
        role="columnheader"
      >
        How often
      </th>
    </tr>
  </thead>
  <tbody
    class="nhsuk-table__body"
  >
    <tr
      class="nhsuk-table__row"
      role="row"
    >
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        <span
          class="nhsuk-table-responsive__heading"
        >
          Age
        </span>
        7 to 9 years
      </td>
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        <span
          class="nhsuk-table-responsive__heading"
        >
          How much
        </span>
        200mg
      </td>
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        <span
          class="nhsuk-table-responsive__heading"
        >
          How often
        </span>
        Max 3 times in 24 hours
      </td>
    </tr>
    <tr
      class="nhsuk-table__row"
      role="row"
    >
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        <span
          class="nhsuk-table-responsive__heading"
        >
          Age
        </span>
        10 to 11 years
      </td>
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        <span
          class="nhsuk-table-responsive__heading"
        >
          How much
        </span>
        200mg to 300mg
      </td>
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        <span
          class="nhsuk-table-responsive__heading"
        >
          How often
        </span>
        Max 3 times in 24 hours
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table > should match snapshot 1`] = `
<table
  class="nhsuk-table"
  data-testid="table"
>
  <thead
    class="nhsuk-table__head"
    role="rowgroup"
  >
    <tr
      class=""
      role="row"
    >
      <th
        class="nhsuk-table__header"
        role="columnheader"
      >
        Age
      </th>
      <th
        class="nhsuk-table__header"
        role="columnheader"
      >
        How much
      </th>
      <th
        class="nhsuk-table__header"
        role="columnheader"
      >
        How often
      </th>
    </tr>
  </thead>
  <tbody
    class="nhsuk-table__body"
  >
    <tr
      class="nhsuk-table__row"
      role="row"
    >
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        7 to 9 years
      </td>
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        200mg
      </td>
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        Max 3 times in 24 hours
      </td>
    </tr>
    <tr
      class="nhsuk-table__row"
      role="row"
    >
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        10 to 11 years
      </td>
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        200mg to 300mg
      </td>
      <td
        class="nhsuk-table__cell"
        role="cell"
      >
        Max 3 times in 24 hours
      </td>
    </tr>
  </tbody>
</table>
`;
